--------------------
Zmiany w EWDwskazniki 0.7 (2015-10-06)

- Nowe funkcje:
  - parametry_rozkladu_rasch(), przeksztalc_skale_norm(),
    przeksztalc_dane_normami() pozwalają poradzić sobie z przygotowywaniem
    danych do wyliczania jednorocznych wskaźników maturalnych.

- Nowe funkcjonalności:
  - dane_do_kalkulatora() obsługuje modele maturalne.

--------------------
Zmiany w EWDwskazniki 0.6 (2015-09-14)

- Nowe funkcjonalności:
  - przygotuj_wsk_ewd() obsługuje trzyletnie modele gimnazjalne (rozpoznaje je
    jako te wyestymowane lmer(), co oczywiście nie jest doskonałe, bo poki co
    nie poradzi sobie z modelami z matury);
  - panorama_ewd() bardzo grubo, ale zawsze dopasowuje bandwidth do skali tego,
    co ma na osi poziomej;

--------------------
Zmiany w EWDwskazniki 0.5 (2015-08-13)

- Nowe funkcje:
  - tabelki_dane_do_modeli_ewd(): funkcja pozwala łatwo przygotować cały pakiet
    zestawień liczby zdających i parametrów rozkładu zmiennych używanych do
    estymacji modeli EWD (wykorzystuje do tego wcześniej obecne w pakiecie
    funcje tabelka_ld() i parametry_egz() );
  - przygotuj_wsk_ewd(): automatyzuje cały proces wyliczania wartości wskaźników
    EWD na podstawie wyestymowanych modeli;
    - póki co pełny zakres działania został zapewniony jedynie dla wskaźników
      jednorocznych;
    - implementacja przypisywania kategorii i przesuwania średnich wartości
      wskaźników dla wskaźników trzyletnich została odłożona na następną wersję;
  - panorama_z_listy_wskaznikow(): rysuje "panoramy edukacji" (tj. wykresy
    rozrzutu szkół śr. wyniki x EWD) na podstawie tego, co zwraca
    przygotuj_wsk_ewd().

- Nowe funkcjonalności:
  - parametry_egz() akceptuje wiele zmiennych jako definiujących grupowanie
    "bez łącznie" (tj. grBezLacznie może mieć wiele elementów);
  - zmieniono sposób działania tabelka_ld() tak, że sama nie dokonuje grupowania
    ze względu na lata (ale można łatwo uzyskać taki efekt odpalając ją